RESOLVED FIXED Bug 97077
[EFL] Focus problem in inspector/extensions/extensions-panel.html
https://bugs.webkit.org/show_bug.cgi?id=97077
Summary [EFL] Focus problem in inspector/extensions/extensions-panel.html
Chris Dumez
Reported 2012-09-18 23:38:30 PDT
It seems we have a focus problem in inspector/extensions/extensions-panel.html: --- /home/buildslave-1/webkit-buildslave/efl-linux-64-debug/build/layout-test-results/inspector/extensions/extensions-panel-expected.txt +++ /home/buildslave-1/webkit-buildslave/efl-linux-64-debug/build/layout-test-results/inspector/extensions/extensions-panel-actual.txt @@ -22,7 +22,7 @@ show : <function> } Panel shown -focused: true +focused: false Extension panel size correct RUNNING TEST: extension_testSearch Panel hidden
Attachments
Patch (2.76 KB, patch)
2013-02-28 01:41 PST, Seokju Kwon
no flags
Chris Dumez
Comment 1 2012-09-18 23:43:52 PDT
Seems to fail on Qt port as well.
Seokju Kwon
Comment 2 2013-02-28 01:41:54 PST
Laszlo Gombos
Comment 3 2013-02-28 17:18:00 PST
Comment on attachment 190680 [details] Patch lgtm.
WebKit Review Bot
Comment 4 2013-02-28 17:53:23 PST
Comment on attachment 190680 [details] Patch Clearing flags on attachment: 190680 Committed r144403: <http://trac.webkit.org/changeset/144403>
WebKit Review Bot
Comment 5 2013-02-28 17:53:27 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.