[EFL] Focus problem in inspector/extensions/extensions-panel.html https://bugs.webkit.org/show_bug.cgi?id=97077

Patch by Seokju Kwon <seokju.kwon@gmail.com> on 2013-02-28
Reviewed by Laszlo Gombos.

Source/WebKit/efl:

* WebCoreSupport/InspectorClientEfl.cpp:
(WebCore::InspectorFrontendClientEfl::bringToFront): Set focus on inspectorView.

LayoutTests:

Remove inspector/extensions/extensions-panel.html from TestExpectations.

* platform/efl-wk1/TestExpectations:

Canonical link: https://commits.webkit.org/129474@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@144403 268f45cc-cd09-0410-ab3c-d52691b4dbfc